# rhminer

./: CMakeLists.txt  CMakePresets.json  README.md
MinersLib/: Global.h  GpuManager.cpp  StratumClient.cpp
corelib/: CommonData.h  PascalWork.h
rhminer/: precomp.h
